<resources>
    <string name="app_name">Thrifty</string>

    <string name="required">Required</string>
    <string name="successLogin">Logged in successfully</string>
    <string name="wrongPsw">Invalid email or incorrect password</string>
    <string name="emptyFields">Fields cannot be empty</string>
    <string name="warningEmail">Please provide your email address</string>
    <string name="chkEmail">Check your email</string>
    <string name="wrongEmail">Email not found</string>
    <string name="emailWarning">This email address is registered. Please login </string>
    <string name="unmatchPsw">Password does not matched</string>
    <string name="min8">Minimum 8 Character Password</string>
    <string name="upperCase">Must Contain 1 Upper-case Character</string>
    <string name="lowerCase">Must Contain 1 Lower-case Character</string>
    <string name="specialChar">Must Contain 1 Special Character (@#$%^%26+=)</string>
    <string name="loading">Loading...</string>
    <string name="plsWait">Please Wait</string>
    <string name="wentWrong">Something went wrong</string>
    <string name="deleteListing">Delete item</string>
    <string name="cfmDelete">Are you sure you want to delete this product?</string>
    <string name="prodDeleted">Product deleted</string>
    <string name="ordered">Ordered</string>
    <string name="dispatch">Dispatched</string>
    <string name="deliver">Delivered</string>
    <string name="cancelStatus">Canceled</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="cfmCancelOrder">Are you sure you want to cancel this order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="canceled">Order canceled</string>
    <string name="kg">kg</string>
    <string name="rm">RM </string>
    <string name="carbonKg">kg of Carbon Footprint</string>
    <string name="selectCat">"Select Category"</string>
    <string name="selectCover">Please select cover image</string>
    <string name="selectProd">Please select product image</string>
    <string name="selectWarn">Please select category</string>
    <string name="storageError">Something went wrong with storage</string>
    <string name="emptyField">Please fill all fields</string>
    <string name="updateAdd">Address Updated</string>
    <string name="addedProd">Product Added</string>
    <string name="list6">Let\'s discover your treasures here, from vintage gems to designer labels</string>
    <string name="list2">Hey! The fashion industry accounts for about 8-10% of global carbon emissions, and nearly 20% of wastewater! Let\'s start thrifting now</string>
    <string name="list1">Do you know? Furniture production has a huge global carbon footprint. Each piece of furniture generates an average of 47kg of carbon dioxide equivalents.</string>
    <string name="list3">Fashion industry creates more emission than flying, forget about fast fashion now!</string>
    <string name="list4">Do you enjoy exploring different styles and trends without breaking the bank? Starts thrifting now!</string>
    <string name="list5">Thrifting saves tons of preloved from ending up in landfills</string>
    <string name="list7">Reusing 1 kg of clothing saves 25 kg of CO2 according to a study.</string>
    <string name="itemCart">Total item In Cart :</string>
    <string name="carbonTotal">Total Carbon Footprint Saved : %.2f kg</string>
    <string name="costTotal">Total Cost : RM %.2f</string>
    <string name="addProd">Please add product to cart</string>
    <string name="confirmAdd">Please Confirm Your address</string>
    <string name="coverUpdate">Cover Image Updated</string>
    <string name="coverError">Something went wrong with updating cover img</string>
    <string name="coverStoreError">Something went wrong with cover image storage</string>
    <string name="prodImgError">Something went wrong with product image storage</string>
    <string name="updateListing">Listing Updated</string>
    <string name="goCart">Go to Cart</string>
    <string name="addCart">Add to Cart</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="no_account_sign_up_here">No account? Sign up here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="product_name">Product Name</string>
    <string name="id">ID</string>
    <string name="delivered">Delivered</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="carbon">Carbon :</string>
    <string name="price">Price :</string>
    <string name="cancelBtn">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="product_image">Product Image</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="reauthenticate">Please reauthenticate before deletion</string>
    <string name="product_description">Product Description:</string>
    <string name="carbon_footprint_saved_kg">Carbon Footprint Saved(kg)</string>
    <string name="product_price">Product Price</string>
    <string name="select_cover_image">Select Cover Image</string>
    <string name="select_product_image">Select Product Image</string>
    <string name="add_product">Add Product</string>
    <string name="loginlogo">loginLogo</string>
    <string name="registerlogo">registerLogo</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="addressLogo">Address logo</string>
    <string name="user_name">User Name</string>
    <string name="unit_no">Unit No</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="state">State</string>
    <string name="save_address">Save Address</string>
    <string name="total_of_200kg_carbon_footprint_is_saved_from_your_past_purchase">Total of 200kg carbon footprint is saved from your past purchase!</string>
    <string name="single_line_text_view_that_scrolls_automatically_if_the_text_is_too_long_to_fit_in_the_widget">Single-line text view that scrolls automatically if the text is too long to fit in the widget</string>
    <string name="total_item_in_cart_is_10">Total item in cart is 10</string>
    <string name="total_carbon_footprint_saved">Total Carbon Footprint Saved :</string>
    <string name="total_cost_20000">Total Cost: 20000</string>
    <string name="checkout">Checkout</string>
    <string name="redirecting_you_back_to_home_page">Redirecting you back to home page...</string>
    <string name="update_listing">Update Listing</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="see_all">See All</string>
    <string name="shop_by_products">Shop by Products</string>
    <string name="add_listing_button">Add Listing Button</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="of_carbon_footprint_saved">of carbon footprint saved!</string>
    <string name="sorting">Sorting</string>
    <string name="checkEmail">Check your email</string>
    <string name="noEmail">Email not found</string>
    <string name="deletedAcc">Account deleted successfully! You will be logged out now...</string>
    <string name="noEmailExist">No users matched the email.</string>
    <string name="updatedPic">Profile Pic Updated</string>
    <string name="selectImg">Please select image</string>
    <string name="removeUser">Removed user successfully</string>
    <string name="failedAuthen">Re-authentication failed:</string>
    <string name="inputPsw">Please input password</string>
    <string name="loggedOut">You are logged out now...</string>
    <string name="plsSelectCat">Please select category</string>
    <string name="empty">Empty</string>
    <string name="sortPrice">Sort by price</string>
    <string name="sortCarbon">Sort by carbon footprint saved</string>
    <string name="sortDate">Sort by order date</string>
    <string name="sortName">Sort by product name</string>
    <string name="carbonPast">Total of  %.2f kg carbon footprint is saved from your past purchase!</string>
    <string name="placedOrder">Order Placed</string>
    <string name="currentCat">"Current Category: "</string>
    <string name="uploaded">Uploaded</string>
    <string name="searchHint">Search...</string>


    <string-array name="encourageMsg">
        <item>Do you know? Furniture production has a huge global carbon footprint. Each piece of furniture generates an average of 47kg of carbon dioxide equivalents.</item>
        <item>Hey! The fashion industry accounts for about 8-10% of global carbon emissions, and nearly 20% of wastewater! Let\'s start thrifting now</item>
        <item>Fashion industry creates more emission than flying, forget about fast fashion now!</item>
        <item>Do you enjoy exploring different styles and trends without breaking the bank? Starts thrifting now!</item>
        <item>Thrifting saves tons of preloved from ending up in landfills</item>
        <item>Let\'s discover your treasures here, from vintage gems to designer labels</item>
        <item>Reusing 1 kg of clothing saves 25 kg of CO2 according to a study.</item>
    </string-array>
    <string name="orderID">Order ID:</string>
    <string name="sold">Sold by :</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="usernameMore">Username :</string>
    <string name="nameMore">name</string>
    <string name="email_addressMore">Email Address :</string>
    <string name="emailMore">email</string>
    <string name="passwordMore">Password:</string>
    <string name="change">Change</string>
    <string name="addressMore">Address :</string>
    <string name="updateMore">Update</string>
    <string name="all_orders">All Orders:</string>
    <string name="click_here_to_view">Click here to view</string>
    <string name="listings_sold">Listings Sold:</string>
    <string name="logout">logout</string>
    <string name="remove_account">remove account</string>
    <string name="all_listings">All Listings:</string>
    <string name="sold_by_hotmail_com">Sold by hotmail.com</string>
    <string name="desc">Desc...</string>
    <string name="ordered_by">Ordered by:</string>
    <string name="dispatched">Dispatched</string>
    <string name="buyer">Buyer:\n</string>

</resources>